--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -20,4 +20,6 @@
     <string name="cd_show_password">showPasswordImg</string>
     <string name="cd_bottom_circle">bottomCircle</string>
     <string name="cd_add_new_contact">addNewContact</string>
+    <string name="tv_add_new_contact_headline">Choose contact</string>
+    <string name="ed__new_message_hint">New message here&#8230;</string>
 </resources>
