--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="cd_show_password">showPasswordImg</string>
     <string name="cd_bottom_circle">bottomCircle</string>
     <string name="cd_add_new_contact">addNewContact</string>
+    <string name="BaseUrl">http://10.0.2.2:5000/api/</string>
 </resources>
