--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -21,4 +21,5 @@
     <string name="cd_bottom_circle">bottomCircle</string>
     <string name="cd_add_new_contact">addNewContact</string>
     <string name="BaseUrl">http://192.168.1.37:5000/api/</string>
+    <string name="ed_new_message_hint">New message here&#8230;</string>
 </resources>
