--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -23,4 +23,8 @@
     <string name="BaseUrl">http://192.168.1.37:5000/api/</string>
     <string name="ed_new_message_hint">New message here&#8230;</string>
     <string name="tv_add_new_contact_headline">Choose contact</string>
+    <string name="tv_settings">Settings</string>
+    <string name="tv_dark_mode">Dark Mode</string>
+    <string name="tv_change_api">Change API</string>
+    <string name="tv_logout">Sign Out</string>
 </resources>
