--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -41,5 +41,5 @@
     <string name="backImg">backImg</string>
     <string name="sendmessage">sendMessage</string>
     <string name="btnAdd">Add</string>
-    <string name="settingimg">settingImg</string>
+    <string name="settingImg">settingImg</string>
 </resources>
